# eels-spectrum-unmixing

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ae_epochs.yaml  components.yaml  dose_sweep.yaml  drift_sweep.yaml  operating_point.yaml  overlap_sweep.yaml  stability.yaml
data/: README.md
data/sample/: oxide_interface_d1000.npz
docs/: api.md
examples/: unmix_your_own_map.py
models/: MODEL_CARD.md  autoencoder.pt
notebooks/: tutorial.ipynb
results/: ae_epochs.json  components.json  dose_sweep.json  drift_sweep.json  fair_tuning.json  operating_point.json  overlap_sweep.json  stability.json
scripts/: build_notebook.py  fair_tuning_check.py  make_figures.py  run_all.py
src/eelsunmix/: __init__.py  autoencoder.py  benchmark.py  cli.py  io.py  methods.py  metrics.py  plots.py  sim.py
tests/: test_autoencoder.py  test_benchmark.py  test_cli.py  test_io.py  test_methods.py  test_metrics.py  test_sim.py
