[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eelsunmix"
version = "0.1.0"
description = "Spectral unmixing benchmark for simulated STEM-EELS spectrum images: physics-motivated simulator with exact ground truth, PCA/NMF/VCA baselines, a constrained unmixing autoencoder, and a config-driven benchmark harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.15.22",
    "black==26.5.1",
    "nbclient>=0.9",
    "nbformat>=5.9",
    "ipykernel>=6.25",
]

[project.scripts]
eelsunmix = "eelsunmix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
